--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/moviecollection
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode = none
+
+logging.level.org.springframework.web=DEBUG
